--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -7,10 +7,13 @@
 	<meta charset="utf-8" />
 	<title>Welcome to Employee-manager Project</title>
 	<!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-	
-	<link href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/united/bootstrap.min.css" rel="stylesheet" />
-	
+	<link rel="stylesheet"
+		href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+
+	<link
+		href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/united/bootstrap.min.css"
+		rel="stylesheet" />
+
 	<!-- Custom styles for this template -->
 	<link href="../css/employee-manager.css" rel="stylesheet" />
 </h:head>
@@ -23,12 +26,14 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/employee-manager/pages/index.jsf">Employee-manager</a>
+				<a class="navbar-brand" href="../index.html">Employee-manager</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="#{indexActive}"><a href="/employee-manager/pages/index.jsf"><span class="glyphicon glyphicon-home"></span> Accueil</a></li>
-					<li class="#{employesActive}"><a href="/employee-manager/pages/employes/"><span class="glyphicon glyphicon-user"></span> Employes</a></li>
+					<li class="#{indexActive}"><a href="../index.html"><span
+							class="glyphicon glyphicon-home"></span> Accueil</a></li>
+					<li class="#{employesActive}"><a href="list.jsf"><span
+							class="glyphicon glyphicon-user"></span> Employes</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -44,7 +49,9 @@
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+	<script
+		src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script
+		src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 </h:body>
 </html>
