--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -32,8 +32,14 @@
 				<ul class="nav navbar-nav">
 					<li class="#{indexActive}"><a href="../index.html"><span
 							class="glyphicon glyphicon-home"></span> Accueil</a></li>
-					<li class="#{employesActive}"><a href="list.jsf"><span
+					<li class="#{employeActive}"><a href="../employee/create.jsf"><span
+							class="glyphicon glyphicon-user"></span> Employe</a></li>
+					<li class="#{employesActive}"><a href="../employee/list.jsf"><span
 							class="glyphicon glyphicon-user"></span> Employes</a></li>
+					<li class="#{employeActive}"><a href="../mission/create.jsf"><span
+							class="glyphicon glyphicon-user"></span> Mission</a></li>
+					<li class="#{employesActive}"><a href="../mission/list.jsf"><span
+							class="glyphicon glyphicon-user"></span> Missions</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
