Correction copier coller du DAO et jsf

--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -36,10 +36,10 @@
 							class="glyphicon glyphicon-user"></span> Employe</a></li>
 					<li class="#{employesActive}"><a href="../employee/list.jsf"><span
 							class="glyphicon glyphicon-user"></span> Employes</a></li>
-					<li class="#{employeActive}"><a href="../mission/create.jsf"><span
-							class="glyphicon glyphicon-user"></span> Mission</a></li>
-					<li class="#{employesActive}"><a href="../mission/list.jsf"><span
-							class="glyphicon glyphicon-user"></span> Missions</a></li>
+					<li class="#{missionActive}"><a href="../mission/create.jsf"><span
+							class="glyphicon glyphicon-star"></span> Mission</a></li>
+					<li class="#{missionsActive}"><a href="../mission/list.jsf"><span
+							class="glyphicon glyphicon-list-alt"></span> Missions</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
