--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -28,25 +28,27 @@
 				</button>
 				<a class="navbar-brand" href="/template-JSF-CDI-EJB/index.jsf">Employee-manager</a>
 			</div>
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li class="#{indexActive}"><a
-						href="/template-JSF-CDI-EJB/index.jsf"><span
-							class="glyphicon glyphicon-home"></span> Accueil</a></li>
-					<li class="#{employeActive}"><a
-						href="/template-JSF-CDI-EJB/employee/create.jsf"><span
-							class="glyphicon glyphicon-user"></span> Employe</a></li>
-					<li class="#{employesActive}"><a
-						href="/template-JSF-CDI-EJB/employee/list.jsf"><span
-							class="glyphicon glyphicon-user"></span> Employes</a></li>
-					<li class="#{missionActive}"><a
-						href="/template-JSF-CDI-EJB/mission/create.jsf"><span
-							class="glyphicon glyphicon-star"></span> Mission</a></li>
-					<li class="#{missionsActive}"><a
-						href="/template-JSF-CDI-EJB/mission/list.jsf"><span
-							class="glyphicon glyphicon-list-alt"></span> Missions</a></li>
-				</ul>
-			</div>
+			<h:form>
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav">
+						<li class="#{indexActive}"><a
+							href="/template-JSF-CDI-EJB/index.jsf"><span
+								class="glyphicon glyphicon-home"></span> Accueil</a></li>
+						<li class="#{employeActive}"><a
+							href="/template-JSF-CDI-EJB/employee/create.jsf"><span
+								class="glyphicon glyphicon-user"></span> Employe</a></li>
+						<li class="#{employesActive}"><a
+							href="/template-JSF-CDI-EJB/employee/#{employeMB.initListEmploye()}"><span
+								class="glyphicon glyphicon-user"></span> Employes</a></li>
+						<li class="#{missionActive}"><a
+							href="/template-JSF-CDI-EJB/mission/create.jsf"><span
+								class="glyphicon glyphicon-star"></span> Mission</a></li>
+						<li class="#{missionsActive}"><a
+							href="/template-JSF-CDI-EJB/mission/list.jsf"><span
+								class="glyphicon glyphicon-list-alt"></span> Missions</a></li>
+					</ul>
+				</div>
+			</h:form>
 			<!--/.nav-collapse -->
 		</div>
 	</div>
