Ajout primefaces pour sortBy liste mission

--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -44,7 +44,7 @@
 							href="/template-JSF-CDI-EJB/mission/create.jsf"><span
 								class="glyphicon glyphicon-star"></span> Mission</a></li>
 						<li class="#{missionsActive}"><a
-							href="/template-JSF-CDI-EJB/mission/list.jsf"><span
+							href="/template-JSF-CDI-EJB/mission/#{missionMB.initListMission()}"><span
 								class="glyphicon glyphicon-list-alt"></span> Missions</a></li>
 					</ul>
 				</div>
