--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -48,6 +48,12 @@
 						<li class="#{missionsActive}"><a
 							href="/template-JSF-CDI-EJB/mission/#{missionMB.initListMission()}"><span
 								class="glyphicon glyphicon-list-alt"></span> Missions</a></li>
+						<li class="#{adresseActive}"><a
+							href="/template-JSF-CDI-EJB/adresse/create.jsf"><span
+								class="glyphicon glyphicon-globe"></span> Adresse</a></li>
+						<li class="#{adressesActive}"><a
+							href="/template-JSF-CDI-EJB/adresse/#{adresseMB.initListAdresse()}"><span
+								class="glyphicon glyphicon-list"></span> Adresses</a></li>
 					</ul>
 				</div>
 			</h:form>
