Ajout changement de ville aléatoire

--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -54,7 +54,8 @@
 						<li class="#{adressesActive}"><h:commandLink
 								action="#{adresseMB.initListAdresse()}" value="Adresses"
 								styleClass="glyphicon glyphicon-list" /></li>
-						<li><h:outputText value="#{MeteoMB.city} " /> <h:outputText
+						<li>#{MeteoMB.changeVille()}<h:outputText
+								value="#{MeteoMB.city} " /> <h:outputText
 								value=" #{MeteoMB.temperature}F - #{MeteoMB.convertFtoC()}C" />
 							<img border="0" src="#{MeteoMB.iconeMeteo()}" alt="Meteo"
 							width="20" height="20" /></li>
