Ajout recherche ip

--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -62,10 +62,10 @@
 						<h:outputText value="#{MeteoMB.city} " />
 						<img border="0" src="#{MeteoMB.iconeMeteo()}" alt="Meteo"
 							width="20" height="20" /> <br />
-
 						<h:outputText
 							value=" #{MeteoMB.temperature}F - #{MeteoMB.convertFtoC()}C" />
-
+						<br />
+						<h:outputText value=" #{MeteoMB.ipAddress}" />
 
 					</p>
 				</div>
