annotation du persistence pour le jndi

--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -65,7 +65,7 @@
 						<h:outputText
 							value=" #{MeteoMB.temperature}F - #{MeteoMB.convertFtoC()}C" />
 						<br />
-						<h:outputText value=" #{MeteoMB.ipAddress}" />
+						<h:outputText value=" #{MeteoMB.ipAddressClient}" />
 
 					</p>
 				</div>
